# Human3D

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
apps/: buildShapeModel.cpp  fitting.cpp
include/: Alignment.h  BodyParameters.h  BuildSSM.h  GaussianPrior.h  GaussianProportionEvaluator.h  GaussianProposal.h  Mesh.h  MetropolisHastings.h  Model.h  ObjLoader.h  PCA.h  Pixel.h  Point.h  ProposalDistribution.h  TriangleCell.h  UI.h  Vertex.h
src/: Alignment.cpp  BuildSSM.cpp  GaussianPrior.cpp  GaussianProportionEvaluator.cpp  GaussianProposal.cpp  Mesh.cpp  MetropolisHastings.cpp  Model.cpp  ObjLoader.cpp  PCA.cpp  Pixel.cpp  UI.cpp
tests/: CMakeLists.txt  assimp_test.cpp  buildSSM_test.cpp  displayImg_test.cpp  drawPoint_test.cpp  drawTriangle_test.cpp  glfw_test.cpp  hdf5_test.cpp  ids_index.json  landmarks_test.cpp  metropolis_test.cpp  model2_test.cpp  model_test.cpp  objloader_test.cpp  opencv2_test.cpp  pixel_test.cpp  proposals_test.cpp  readPCAModel_test.cpp  readPCASmplx_test.cpp  ui_test.cpp
